--- a/D1.1/D1.1_external_libraries_integration.tex
+++ b/D1.1/D1.1_external_libraries_integration.tex
@@ -41,7 +41,7 @@
     \tableEntry{Deliverable version}{0.1}
     \tableEntry{Date of delivery}{31/07/2025}
     \tableEntry{Actual date of delivery}{\today}
-    \tableEntry{Nature of deliverable}{Other}
+    \tableEntry{Nature of deliverable}{Dissemination, Exploitation, and Communication}
     \tableEntry{Dissemination level}{Public}
     \tableEntry{Work Package}{WP1}
     \tableEntry{Partner responsible}{INPT}
